<resources>
    <string name="activity_name">Catalog</string>
    <string name="fragment_detail">Detail</string>
    <string name="item_menu_search">Search</string>

    <!-- Detail Fragment -->

    <string name="item_detail_name">Name</string>
    <string name="item_detail_genre">Genres</string>
    <string name="item_detail_schedule">Schedule</string>
    <string name="item_detail_summary">Summary</string>
    <string name="item_detail_">Search</string>

    <!-- Episode Item Adapter -->

    <string name="item_episode_label">Episode %d</string>
    <string name="item_season_label">Season %d</string>

    <!-- Episode Bottom Sheet -->

    <string name="item_season">Season</string>


</resources>