<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/container">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemEpisodeImage"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/itemShowDetailContainer"
            app:layout_constraintTop_toTopOf="@id/itemShowDetailContainer"
            android:scaleType="centerCrop"
            android:contentDescription="@null" />

        <LinearLayout
            android:id="@+id/itemShowDetailContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/itemEpisodeImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/itemEpisodeImage">

            <TextView
                android:id="@+id/itemEpisodeNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/item_episode_label" />

            <TextView
                android:id="@+id/itemEpisodeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                tools:text="Grey's Anatomy" />

            <TextView
                android:id="@+id/itemSeasonNumberLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/item_season" />

            <TextView
                android:id="@+id/itemSeasonNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                tools:text="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/itemShowDetailSummaryLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/itemShowDetailContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/item_detail_summary" />

        <TextView
            android:id="@+id/itemEpisodeSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/itemShowDetailSummaryLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="14sp"
            tools:text="ajsdflkjasdfkjasldkfjaklsdjfklasjdflkajdfasdlkfjalksdjflkadjflkajdflkajsdflkajsdflkjasdlkfjaslkdfjalkdfjaslkdfjasdlkfjalksdjflaksdjflkasjdflkajdflkasjdflkajsdflkasjdflkasdjflksdjflkasjdflkasjdflkjasdflkjasdlkfjalskdfjalks" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>